--- a/src/core/welcome/welcome.html
+++ b/src/core/welcome/welcome.html
@@ -1,8 +1,11 @@
-<section class="welcome">  
+<section class="welcome">
   <div class="container-fluid">
+    <template v-if="num_pis">      
+    </template>
     <template v-if="confirmEmail">
       <div class="email-confirm mt-4">
-        Account Confirmed!        
+        <span v-if="textShow">Account Confirmed!</span>
+        <font-awesome-icon icon="star" class="blob" v-for="i in num_pis" />
       </div>
       <div class="mt-3">
         <a href="http://localhost:8080/login">Please login</a>
@@ -11,8 +14,8 @@
     <template v-else>
       <div class="email-confirm mt-4">
         Please confirm again!!!
-        <font-awesome-icon icon="star" class="blob" v-for="i in num_pis"/>
       </div>
     </template>
+
   </div>
 </section>
